@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-29T16:15:21Z",
-  "count_outdated" : 302,
-  "uniques_outdated" : 156,
-  "count" : 329,
+  "timestamp" : "2022-05-30T01:06:07Z",
+  "count_outdated" : 304,
+  "uniques_outdated" : 157,
+  "count" : 330,
   "uniques" : 176,
   "clones" : [
-    {
-      "timestamp": "2022-05-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-16T00:00:00Z",
       "count": 1,
